# tmp-python-sample-yn1205

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml  validate.yml
it/: test_it.py
tests/: test_main.py
tmp_python_sample_yn1205/: __init__.py  main.py  version.py
