[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "tmp_python_sample_yn1205" = "tmp_python_sample_yn1205" }

[tool.setuptools.packages.find]
include = ["tmp_python_sample_yn1205*"]

[project]
version = "0.23.5"
name = "tmp-python-sample-yn1205"
authors = [{ name = "foo", email = "bar@gmail.com" }]
description = "Sample tmp_python_sample_yn1205"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "jq==1.6.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.0.3",
  "pep8-naming",
  # "python-semantic-release>=9.8",
  "toml-cli",
  "types-PyYAML",
  "types-setuptools",
  ## Constrain system
  "black",
  "isort",
  "pylint",
  "pyclean",
  "pytest",
]

[project.urls]
Homepage = "https://github.com/yana1205-test/tmp-python-sample-yn1205"
Issues = "https://github.com/yana1205-test/tmp-python-sample-yn1205/issues"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["tmp_python_sample_yn1205"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.pylint.messages_control]
disable = ["W1203", "W1201"]

[tool.pylint.format]
max-line-length = 120

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"

[tool.semantic_release.remote.token]
env = "GITHUB_TOKEN"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = false